[project]
name = "lofter-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xtaodada", email = "xtao@xtaolink.cn" } 
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "pydantic>=2.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lofter"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
