[project]
name = "lofter-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xtaodada", email = "xtao@xtaolink.cn" } 
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lofter"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.8.0",
]
